--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.8.1",
         "axios": "^1.13.2",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-redux": "^9.2.0",
         "react-router-dom": "^7.5.3"
     },
     "devDependencies": {
